--- a/BCWinForm/BCMainForm.resx
+++ b/BCWinForm/BCMainForm.resx
@@ -297,59 +297,35 @@
   <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
     <value>12, 26</value>
   </data>
-  <data name="logInToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 26</value>
-  </data>
-  <data name="logInToolStripMenuItem.Text" xml:space="preserve">
-    <value>Log In</value>
-  </data>
-  <data name="logOutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 26</value>
-  </data>
-  <data name="logOutToolStripMenuItem.Text" xml:space="preserve">
-    <value>Log Out</value>
-  </data>
-  <data name="engineerToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 26</value>
-  </data>
-  <data name="engineerToolStripMenuItem.Text" xml:space="preserve">
-    <value>Engineer</value>
-  </data>
-  <data name="languageChangeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 26</value>
-  </data>
-  <data name="languageChangeToolStripMenuItem.Text" xml:space="preserve">
-    <value>Language Change</value>
-  </data>
-  <data name="sectionDataToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>188, 26</value>
-  </data>
-  <data name="sectionDataToolStripMenuItem.Text" xml:space="preserve">
-    <value>Section Data</value>
-  </data>
-  <data name="editToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 26</value>
-  </data>
-  <data name="editToolStripMenuItem.Text" xml:space="preserve">
-    <value>Edit</value>
-  </data>
-  <data name="editToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>240, 6</value>
-  </data>
-  <data name="transferCommandToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>243, 26</value>
-  </data>
-  <data name="transferCommandToolStripMenuItem.Text" xml:space="preserve">
-    <value>Transfer Command</value>
-  </data>
   <data name="operatorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>97, 26</value>
   </data>
   <data name="operatorToolStripMenuItem.Text" xml:space="preserve">
     <value>Operator</value>
+  </data>
+  <data name="changePasswordToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>235, 26</value>
+  </data>
+  <data name="changePasswordToolStripMenuItem.Text" xml:space="preserve">
+    <value>Change Password</value>
+  </data>
+  <data name="uASToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>235, 26</value>
+  </data>
+  <data name="uASToolStripMenuItem.Text" xml:space="preserve">
+    <value>User Authuority</value>
+  </data>
+  <data name="reserveSectionInfoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>235, 26</value>
+  </data>
+  <data name="reserveSectionInfoToolStripMenuItem.Text" xml:space="preserve">
+    <value>Reserve Info</value>
+  </data>
+  <data name="staticsChartToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>235, 26</value>
+  </data>
+  <data name="staticsChartToolStripMenuItem.Text" xml:space="preserve">
+    <value>Statics Chart</value>
   </data>
   <data name="mataToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>128, 26</value>
@@ -447,6 +423,30 @@
   <data name="dToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
+  <data name="hostConnectionToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>220, 26</value>
+  </data>
+  <data name="hostConnectionToolStripMenuItem.Text" xml:space="preserve">
+    <value>Host Connection</value>
+  </data>
+  <data name="logInToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 26</value>
+  </data>
+  <data name="logInToolStripMenuItem.Text" xml:space="preserve">
+    <value>Log In</value>
+  </data>
+  <data name="logOutToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 26</value>
+  </data>
+  <data name="logOutToolStripMenuItem.Text" xml:space="preserve">
+    <value>Log Out</value>
+  </data>
+  <data name="engineerToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 26</value>
+  </data>
+  <data name="engineerToolStripMenuItem.Text" xml:space="preserve">
+    <value>Engineer</value>
+  </data>
   <data name="debugToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>192, 26</value>
   </data>
@@ -462,6 +462,12 @@
   <data name="roadControlToolStripMenuItem.Text" xml:space="preserve">
     <value>Road Control</value>
   </data>
+  <data name="languageChangeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 26</value>
+  </data>
+  <data name="languageChangeToolStripMenuItem.Text" xml:space="preserve">
+    <value>Language Change</value>
+  </data>
   <data name="zhTwToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 26</value>
   </data>
@@ -474,38 +480,44 @@
   <data name="enUSToolStripMenuItem.Text" xml:space="preserve">
     <value>en-US</value>
   </data>
-  <data name="changePasswordToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>235, 26</value>
+  <data name="editToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 26</value>
   </data>
-  <data name="changePasswordToolStripMenuItem.Text" xml:space="preserve">
-    <value>Change Password</value>
+  <data name="editToolStripMenuItem.Text" xml:space="preserve">
+    <value>Edit</value>
   </data>
-  <data name="uASToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>235, 26</value>
+  <data name="editToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
-  <data name="uASToolStripMenuItem.Text" xml:space="preserve">
-    <value>User Authuority</value>
+  <data name="sectionDataToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>188, 26</value>
   </data>
-  <data name="reserveSectionInfoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>235, 26</value>
+  <data name="sectionDataToolStripMenuItem.Text" xml:space="preserve">
+    <value>Section Data</value>
   </data>
-  <data name="reserveSectionInfoToolStripMenuItem.Text" xml:space="preserve">
-    <value>Reserve Info</value>
+  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>240, 6</value>
+  </data>
+  <data name="transferCommandToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>243, 26</value>
+  </data>
+  <data name="transferCommandToolStripMenuItem.Text" xml:space="preserve">
+    <value>Transfer Command</value>
   </data>
   <data name="englishToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 26</value>
+    <value>180, 26</value>
   </data>
   <data name="englishToolStripMenuItem.Text" xml:space="preserve">
     <value>English</value>
   </data>
   <data name="zh_twToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 26</value>
+    <value>180, 26</value>
   </data>
   <data name="zh_twToolStripMenuItem.Text" xml:space="preserve">
     <value>繁體中文</value>
   </data>
   <data name="zh_chToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>160, 26</value>
+    <value>180, 26</value>
   </data>
   <data name="zh_chToolStripMenuItem.Text" xml:space="preserve">
     <value>简体中文</value>
@@ -543,12 +555,6 @@
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>735, 17</value>
   </metadata>
-  <data name="hostConnectionToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>220, 26</value>
-  </data>
-  <data name="hostConnectionToolStripMenuItem.Text" xml:space="preserve">
-    <value>Host Connection</value>
-  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -1268,6 +1274,12 @@
   <data name="&gt;&gt;dToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;hostConnectionToolStripMenuItem.Name" xml:space="preserve">
+    <value>hostConnectionToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;hostConnectionToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;toolStripMenuItem2.Name" xml:space="preserve">
     <value>toolStripMenuItem2</value>
   </data>
@@ -1460,10 +1472,10 @@
   <data name="&gt;&gt;timer1.Type" xml:space="preserve">
     <value>System.Windows.Forms.Timer, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;hostConnectionToolStripMenuItem.Name" xml:space="preserve">
-    <value>hostConnectionToolStripMenuItem</value>
+  <data name="&gt;&gt;staticsChartToolStripMenuItem.Name" xml:space="preserve">
+    <value>staticsChartToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;hostConnectionToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;staticsChartToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
